# smol-pg

./: Cargo.toml  README.md
src/: client.rs  codec.rs  connection.rs  lib.rs  message.rs
src/message/: client.rs  mod.rs  server.rs
src/protocol/: mod.rs
src/protocol/message/: client.rs  mod.rs  parsing.rs  server.rs
src/util/: mod.rs
tests/: simple_query.rs
