[package]
name = "smol-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.13"
futures-lite = { version = "1.13", default-features = false }
thiserror_lite = "0.1"
macro_rules_attribute = "0.2"

# crypto
hmac-sha256 = "1.1"

[dev-dependencies]
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt", "macros"] }
